--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,18 @@
-<!--
-  Copyright 2016 Google Inc. All Rights Reserved.
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
+<?xml version="1.0" encoding="UTF-8"?>
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <packaging>war</packaging>
-  <version>1.0</version>
 
   <groupId>com.digitald4</groupId>
   <artifactId>iis</artifactId>
-
-  <!-- Parent POM defines common plugins and properties. -->
-  <!--parent>
-    <groupId>com.digitald4</groupId>
-    <artifactId>dd4-common</artifactId>
-    <version>1.0</version>
-  </parent-->
+  <version>1.0</version>
+  <packaging>war</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
 
-    <appengine-maven-plugin-version>1.3.1</appengine-maven-plugin-version>
+    <appengine-maven-plugin-version>2.4.4</appengine-maven-plugin-version>
     <endpoints-framework-maven-plugin>2.1.0</endpoints-framework-maven-plugin>
     <endpoints.project.id>ip360-179401</endpoints.project.id>
   </properties>
@@ -44,6 +23,11 @@
       <groupId>com.digitald4</groupId>
       <artifactId>dd4-common</artifactId>
       <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.5.11</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -72,7 +56,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-    
+
   <build>
     <outputDirectory>target/${project.artifactId}/WEB-INF/classes</outputDirectory>
     <resources>
@@ -82,6 +66,15 @@
       </resource>
     </resources>
     <plugins>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>${appengine-maven-plugin-version}</version>
+        <configuration>
+          <deploy.projectId>${endpoints.project.id}</deploy.projectId>
+          <deploy.version>prod</deploy.version>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
@@ -96,20 +89,6 @@
               <targetPath>WEB-INF</targetPath>
             </resource>
           </webResources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>${appengine-maven-plugin-version}</version>
-      </plugin>
-      <plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>endpoints-framework-maven-plugin</artifactId>
-        <version>${endpoints-framework-maven-plugin}</version>
-        <configuration>
-          <!-- plugin configuration -->
-          <hostname>${endpoints.project.id}.appspot.com</hostname>
         </configuration>
       </plugin>
       <plugin>
