--- a/src/main/webapp/WEB-INF/index.yaml
+++ b/src/main/webapp/WEB-INF/index.yaml
@@ -1,6 +1,35 @@
 indexes:
+  - kind: Appointment
+    properties:
+      - name: state
+      - name: end
+  - kind: Appointment
+    properties:
+      - name: nurse_id
+      - name: state
+      - name: end
+  - kind: Appointment
+    properties:
+      - name: patient_id
+      - name: state
+      - name: end
+  - kind: Appointment
+    properties:
+      - name: vendor_id
+      - name: state
+      - name: end
+  - kind: Invoice
+    properties:
+      - name: vendor_id
+      - name: id
+        direction: desc
   - kind: Password
     properties:
       - name: user_id
+      - name: id
+        direction: desc
+  - kind: Paystub
+    properties:
+      - name: nurse_id
       - name: id
         direction: desc
